@@ -130,3 +130,4 @@ TODO: подумать о переделке DataHolder/Tensor/tensormath  в А
 * работа напрямую с DataHolder убрана из всех тестов, взамен используется фабрика. Теперь можно тестировать разные бэкенды.
 * обновлены тесты;
 
+* Tensor -> TensorOMP;
